# fanotify-rs

./: .gitignore  Cargo.toml  README
async-demo/: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
examples/: async-demo.rs
fanotify/: Cargo.toml  README
fanotify-demo/: Cargo.toml
fanotify-demo/src/: main.rs
fanotify/src/: aio.rs  consts.rs  error.rs  fanotify.rs  lib.rs  macros.rs  messages.rs  prelude.rs
scripts/: privileged-lldb-server.sh
src/: consts.rs  error.rs  messages.rs
