[package]
name = "async-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
fanotify = { path = "../fanotify", features = ["aio"] }

thiserror = "2"
clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }

# reclaim libc with feature extra_traits to provide Debug impl
libc = { version = "0.2", features = ["extra_traits"] }
